# eagent

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLI_USAGE.md  Dockerfile  README.md  design.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  命令行使用说明-必看.md
.codex/environments/: environment.toml
docs/: Milestones.md  ROB2问题清单.md  architecture.md  interface_plan.md  requirements.md  system-architecture.md  system-uml.md  需求说明文档.md
docs/adr/: 0001-docling-chunker-model.md  0002-evidence-fusion-rrf.md  0003-validation-mode-and-completeness-relaxation.md  0004-domain-risk-rule-tree.md  0005-domain-fulltext-audit-and-evidence-patching.md  0006-overall-risk-aggregation-rule.md  0007-multilingual-tokenization-for-locators.md  0008-confidence-nullability.md  0009-overall-risk-and-d5-calibration.md  0010-batch-parallelism-and-adaptive-rate-limit.md
docs/evaluation/: README.md
docs/rob2_reference/: rob2_questions.md
evals/: __init__.py  run_eval.py  setup_dataset.py
scripts/: check_bm25_retrieval.py  check_fusion.py  check_question_bank.py  check_relevance_validator.py  check_rob2_graph.py  check_rule_based_locator.py  check_splade_retrieval.py  check_validation.py  d1_playground.py  langextract_metadata_demo.py  langsimith_dataset.py
src/api/: main.py
src/cli/: __init__.py  app.py  common.py  i18n.py
src/core/: __init__.py  config.py
src/eagent/: __init__.py  config.py  graph.py  llm.py  main.py  prompts.py  runner.py  state.py  telemetry.py  visualize.py
src/evidence/: __init__.py  fusion.py
src/persistence/: __init__.py  cache.py  contracts.py  fs_store.py  hashing.py  manager.py  models.py  sqlite_store.py
src/playground/: __init__.py  d1_playground.py  domain_playground.py
src/preprocessing/: __init__.py  doc_scope.py  document_metadata.py
src/reporting/: __init__.py  batch_excel.py  batch_plot.py  builder.py  context.py  docx.py  generator.py  html.py  pandoc_runner.py  pdf.py  schemas.py  utils.py
src/retrieval/: __init__.py  tokenization.py
src/rob2/: __init__.py  decision_rules.py  locator_rules.py  locator_rules.yaml  question_bank.py  rob2_questions.yaml
src/schemas/: __init__.py  requests.py  responses.py
src/services/: __init__.py  io.py  reports.py  rob2_runner.py
src/templates/: report.html
src/utils/: llm_json.py  text.py
tests/: conftest.py  eval.py  test_parsing.py
tests/api/: test_api.py  test_config.py  test_graph.py  test_health.py  test_preprocess.py
tests/integration/: test_batch_run_resume.py  test_cache_reuse.py  test_persistence_run.py  test_rob2_workflow_retry.py
tests/unit/: test_artifact_store.py  test_batch_command.py  test_batch_excel.py  test_batch_plot.py  test_bm25_locator_node.py  test_bm25_retrieval_extended.py  test_completeness_validator.py  test_completeness_validator_extended.py  test_consistency_validator.py  test_core_config.py  test_doc_scope_selector.py  test_document_metadata.py  test_domain_audit.py  test_domain_prompt_templates.py  test_planner.py  (+26 more)
(+183 files in other folders)
