[project]
name = "eagent"
version = "0.1.1"
description = "Production-ready LangGraph agent example"
readme = "README.md"
authors = [
    { name = "liuyan", email = "lyfx99@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core",
    "langgraph",
    "langsmith",
    "pydantic>=2",
    "pydantic-settings>=2",
    "typer",
    "rich",
    "python-dotenv",
    "langchain-anthropic>=1.2.0",
    "langchain-openai>=1.1.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[project.scripts]
eagent = "eagent.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
